--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,6 +8,9 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
+resources.view[] = ""
+resources.frontController.baseUrl = "http://igraonica.zend"
+
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 [staging : production]
 
