--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,7 +11,8 @@ resources.frontController.params.displayExceptions = 0
 resources.view[] = ""
 resources.frontController.baseUrl = "http://igraonica.zend"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-[staging : production]
+
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
 [testing : production]
 phpSettings.display_startup_errors = 1
